refactor: minor code cleanup and maintenance updates
Various small improvements across adapters:
- PartitionedParquetTable: Code style improvements
- VssExtensionTest: Update test assertions
- GovDataSchemaFactory: Minor refactoring for clarity
- GeoCacheManifest: Code cleanup
- SecCacheManifest: Code cleanup
- EconIntegrationTest: Update test expectations

No functional changes, maintaining consistency with metadata-driven architecture.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>